syntax = "proto3";

package gallatin;

service TaskService {
  rpc GetTask (GetTaskDto) returns (TaskDto) {}
  rpc GetPaginatedTasksList (PaginationDto) returns (TasksDto) {}
  rpc CreateTask (CreateTaskDto) returns (TaskDto) {}
  rpc UpdateTask (UpdateTaskDto) returns (TaskDto) {}
  rpc RemoveTask (GetTaskDto) returns (Empty) {}
}

message Empty {}

message PaginationDto {
  int32 page = 1;
  int32 limit = 2;
}

message UpdateTaskDto {
  string id = 1;
  optional string parentId = 2;
  optional string title = 3;
  optional string description = 4;

}

message GetTaskDto {
  string id = 1;
}

message TasksDto {
  repeated TaskDto Tasks = 1;
  int32 count = 2;
}

message CreateTaskDto {
  optional string parentId = 1;
  string title = 2;
  string description = 3;
}

message TaskDto {
  string id = 1;
  optional TaskDto parent = 2;
  string description = 3;
  string title = 4;
  string createdAt = 5;
  string updatedAt = 6;

}

